--- a/home_j.qmd
+++ b/home_j.qmd
@@ -10,7 +10,7 @@ editor: visual
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
-[Syllabus](../syllabus.html)
+[Syllabus](syllabus.html)
 
 | Date | Section/Topic | Lecture | 
 |------------------|------------------|------------------|
