--- a/home_f.qmd
+++ b/home_f.qmd
@@ -15,6 +15,6 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 | Date       | Section/Topic    | Lecture        |
 |------------|------------------|----------------|
 | **Week 1** |                  |                |
-| 1/22       | Linear Functions | [Note](notes/) |
+| 1/22       | Linear Functions | [Note](notes_f/Linear/Linear_Functions.pdf) |
 
 : {.striped .hover}
