--- a/home_d.qmd
+++ b/home_d.qmd
@@ -16,5 +16,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 |------------------|------------------|------------------|
 | **Week 1** |  |  |  |
 | 1/22       | Linear Functions | [Note](notes_d/Linear/Linear_Functions.pdf) |
+| **Week 2** |  |  |  |
+| 1/29       | Applications of Linear Functions | [Note](notes_d/Linear/.pdf) |
 
 : {.striped .hover}
