--- a/home_j.qmd
+++ b/home_j.qmd
@@ -16,4 +16,6 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 |------------------|------------------|------------------|
 | **Week 1** |  |  |  |
 | 1/22       | Linear Functions | [Note](notes_j/Linear/Linear_Functions.pdf) |
+| **Week 2** |  |  |  |
+| 1/29       | Applications of Linear Functions | [Note](notes_d/Linear/.pdf) |
 : {.striped .hover}
