--- a/home_d.qmd
+++ b/home_d.qmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 | Week | Date | Section/Topic | Lecture |
 |:------------------:|:----------------|:----------------|:----------------|
 | 1 | 1/21 | Linear Functions | [Note](notes_d/Linear/Linear_Functions.pdf) |
-| 2 | 1/28 | Applications of Linear Functions | [Note](notes_d/Linear/.pdf) |
+| 2 | 1/28 | Applications of Linear Functions | [Pre-Lecture Notes](notes_d/Linear/Applications of Linear Functions.pdf) |
 | 3 | 2/4 | Review for Exam 1 <br> <u>**Exam 1**</u> | |
 | 4 | 2/11 | Quadratic Functions | |
 | 5 | 2/18 | Applications of Quadratic Functions | |
