--- a/assignments/a1.qmd
+++ b/assignments/a1.qmd
@@ -10,7 +10,7 @@ Please use the attached Excel sheet to complete your work, using the sample solu
 
 Assignment File: [Excel File](a1.xlsx)
 
-Guided Tutorial: [Sample Solution Video](https://bryant.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d4446f7c-f38d-4da0-ac8f-b3ed0118a380)
+Guided Tutorial: [Sample Solution Video](https://bryant.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d4446f7c-f38d-4da0-ac8f-b3ed0118a380) (Right-click the link to open it in a new tab.)
 
 ---
 
