--- a/home_d.qmd
+++ b/home_d.qmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 | 2 | 1/28 | Applications of Linear Functions | [Pre - Notes](notes_d/Linear/Applications of Linear Functions.pdf),  [Notes](notes_d/Linear/post_applications.pdf) | |
 | 3 | 2/4 | Review for Exam 1  | [Practice 1](exams/exam1_practice1.pdf), [Solution](exams/exam1_practice1_sol.pdf) <br> [Practice 2](exams/exam1_practice2.pdf), [Solution](exams/exam1_practice2_sol.pdf) | |
 | 3 | 2/4 |  <u>**Exam 1**</u>  | [Exam 1's Solution](exams/exam1_sol.pdf) | |
-| 4 | 2/11 | Quadratic Functions | | [Assignment 1](assignments/a1.html) |
+| 4 | 2/11 | Quadratic Functions | [Note](notes_d/Quadratic/Solving_Graphing.pdf) | [Assignment 1](assignments/a1.html) |
 | 5 | 2/18 | Applications of Quadratic Functions | | |
 | 6 | 2/25 | Review for Exam 2 <br> <u>**Exam 2**</u> | | |
 | 7 | 3/4 | Exponential Functions | | |
@@ -29,6 +29,5 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 | 14 | 4/22 | Linear Programming and Applications | | |
 | 15 | 4/29 | LP Applications and Review for Final | | |
 | 16 | 5/6 | <u>**Final Exam**</u> (8:30 am - 11:00 am)  |  | |
-
 : {.striped .hover}
 
