--- a/home_j.qmd
+++ b/home_j.qmd
@@ -23,9 +23,9 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 | 7 | 3/4 | Exponential Functions | | |
 | 8 | 3/11 | Applications of Exponential Functions | | |
 | 9 | 3/18 | **Spring Break** | | |
-| 10 | 3/25 | <u>**Exam 3**</u> (Take Home Exam) <br> Derivatives  | | |
-| 11 | 4/1 | Applications of Derivatives | | |
-| 12 | 4/8 | **Reday - No Classes** | | |
+| 10 | 3/25 | Review for Exam 3 <br> <u>**Exam 3**</u>   | | |
+| 11 | 4/1 | Derivatives | | |
+| 12 | 4/8 | Applications of Derivatives | | |
 | 13 | 4/15 | Review for Exam 4 <br> <u>**Exam 4**</u> | | |
 | 14 | 4/22 | Linear Programming and Applications | | |
 | 15 | 4/29 | LP Applications and Review for Final | | |
