--- a/home_f.qmd
+++ b/home_f.qmd
@@ -9,7 +9,7 @@ editor: visual
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
-
+[Office Hours](office_hours.html)
 
 | Week | Date | Section/Topic | Lecture | Assignments |
 |:---:|:---|:---|:---|:---|
