--- a/home_j.qmd
+++ b/home_j.qmd
@@ -10,6 +10,7 @@ editor: visual
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
+[Office Hours](office_hours.html)
 
 | Week | Date | Section/Topic | Lecture | Assignments |
 |:---:|:---|:---|:---|:---|
