--- a/home_d.qmd
+++ b/home_d.qmd
@@ -10,7 +10,7 @@ editor: visual
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
-[Office Hours](office_hours.html)
+[Office Hours Update](office_hours.html)
 
 | Week | Date | Section/Topic | Lecture | Assignments |
 |:---:|:---|:---|:---|:---|
