--- a/home_f.qmd
+++ b/home_f.qmd
@@ -9,7 +9,9 @@ editor: visual
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
-[Office Hours](office_hours.html)
+[Office Hours Update](office_hours.html)
+
+[Bryant Guru](https://bryant.abacus.ai/chatllm/?appId=d9d5dff2a)
 
 | Week | Date | Section/Topic | Lecture | Assignments |
 |:---:|:---|:---|:---|:---|
